<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzles</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="rating">Rating</string>
    <string name="paid_features">Paid features</string>
    <string name="difficult_easy">Easy</string>
    <string name="difficult_medium">Medium</string>
    <string name="difficult_hard">Hard</string>
    <string name="gallery">Gallery</string>
    <string name="result_text">You scored (points):</string>
    <string name="payment_title">Paid features</string>
    <string name="payment_message">Do you really want paid features?</string>
    <string name="payment_yes_button">Yes</string>
    <string name="payment_no_button">No</string>
    <string name="message_problem_with_image">
        Cannot load image. May be image too big. Please select other image
    </string>

</resources>
