<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityRefactoring" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/playItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="match_parent"
                android:src="@drawable/play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="   "
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/new_game"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/loadItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="match_parent"
                android:src="@drawable/load" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="   "
                android:textSize="@dimen/text_size" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/load_game"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/ratingItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="match_parent"
                android:src="@drawable/rating" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="   "
                android:textSize="@dimen/text_size" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/rating"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/paidItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="match_parent"
                android:src="@drawable/dollar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="   "
                android:textSize="@dimen/text_size" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/paid_features"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>