<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="1"
        android:scaleType="fitXY"
        android:src="@drawable/gallery" />

    <TextView
        android:id="@+id/topMarginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text=" " />

    <RadioGroup
        android:id="@+id/rbDificultMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/topMarginTextView"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/difficult_easy"
            android:textSize="@dimen/radio_text_size" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radioButton_margin"
            android:text="@string/difficult_medium"
            android:textSize="@dimen/radio_text_size" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radioButton_margin"
            android:text="@string/difficult_hard"
            android:textSize="@dimen/radio_text_size" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivGallery"
        android:layout_below="@+id/rbDificultMode"
        android:layout_toLeftOf="@+id/TextView01"
        android:layout_toRightOf="@+id/numberOfPointsTextView" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivPreview_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/animal_1_preview" />

                <ImageView
                    android:id="@+id/ivPreview_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_between_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/animal_2_preview" />

                <ImageView
                    android:id="@+id/ivPreview_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_between_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nature_1_preview" />

                <ImageView
                    android:id="@+id/ivPreview_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_between_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nature_2_preview" />

                <ImageView
                    android:id="@+id/ivPreview_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_between_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nature_3_preview" />
            </LinearLayout>
        </HorizontalScrollView>
    </FrameLayout>

    <TextView
        android:id="@+id/numberOfPointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text=" " />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text=" " />

</RelativeLayout>